tests/negative/neg_try_send_use_after_move.safe
-- Test: neg_try_send_use_after_move
-- Description: Access-typed channel elements are rejected before try_send ownership checks run.
-- Expected: REJECT source_frontend_error

package neg_try_send_use_after_move

   type payload is record
      value : integer;

   type payload_ptr is access payload;

   channel data_ch : payload_ptr capacity 1;

   function run
      source  : payload_ptr = new ((value = 1) as payload);
      success : boolean = false;

      try_send data_ch, source, success;
      source.all.value = 2;

